# STADS_Pythonkurs

./: .gitignore  README.md  SetupIDE_Environment.md  pyproject.toml
exams/zertifikat1/: activity.csv  tasks.md
exams/zertifikat2/: tasks.md
lec01/: 01_get_started_syntax.py  02_get_started_syntax_exercise.py  03_variables_datatypes.py  04_variables_datatypes_exercise.py  agenda.md
lec02/: 01_start_with_console.md  02_setting_up_poetry_notebook.md  03_logical_functions.ipynb  05_logical_functions_exercise.ipynb  07_logical_functions_exercise_solution.ipynb  agenda.md
lec03/: 01_numpy_empty.ipynb  02_numpy_filled.ipynb  04_numpy_exercise.ipynb  06_numpy_exercise_solution.ipynb  agenda.md
lec04/: 01_pandas_empty.ipynb  02_pandas_filled.ipynb  04_pandas_excelbsp.xlsx  05_pandas_exercise.ipynb  07_pandas_exercise_solution.ipynb  09_matplotlib.ipynb  10_matplotlib_exercise.ipynb  11_matplotlib_exercise_solution.ipynb  agenda.md
lec05/: 01_seaborn_verteilungsdiagramme.ipynb  02_seaborn_PlotsKategorischeDaten.ipynb  03_seaborn_MatrixPlots.ipynb  04_seaborn_Grids.ipynb  05_seaborn_RegressionPlots.ipynb  06_seaborn_StilUndFarbe.ipynb  07_plotly.ipynb  agenda.md
lec06/: 01_pylint.md  02_pylint_example.py  03_black.md  04_black_unformatted.py  05_black_formatted.py  06_docstringtest.md  07_docstring_test.py  agenda.md
lec07/: 02_app.py  03_app.py  agenda.md  data.pickle.gzip
mock_exam/: pendler.csv  tasks.md
