[tool.poetry]
name = "pythonkurs2020_part1"
version = "0.1.0"
description = ""
authors = ["Moritz Kern <moritz.kern@stads.de>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^5.3.4"
nbconvert = "^6.0.6"
numpy = "^1.19.2"
pandas = "^1.1.3"
xlrd = "^1.2.0"
openpyxl = "^3.0.5"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
plotly = "^4.12.0"
statsmodels = "^0.12.1"
pylint = "^2.6.0"
black = "^20.8b1"
dash = "^1.17.0"
dash-bootstrap-components = "^0.10.7"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
notebook = "^6.1.4"
jupyter_contrib_nbextensions = "^0.5.1"
markdown2pdf = "^0.1.4"
markdown = "^3.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
